# Lumin-SSH

./: .gitignore  README.md  README_EN.md  ai_wails_bindings.go  ai_wails_provider_bindings.go  app.go  config.go  connection_proxy.go  download_transfer.go  external_edit.go  external_edit_test.go  ftp.go  ftp_test.go  go.mod  go.sum  importexport.go  importexport_test.go  local_compress_upload.go  main.go  mcp_bridge.go  mcp_command_provider.go  mcp_file_provider.go  mcp_output_settings.go  mcp_remote_edit_executor.go  mcp_runtime.go  mcp_sessions.go  ping.go  ping_test.go  platform_darwin.go  platform_unix.go  platform_windows.go  program_fonts.go  r2.go  sftp.go  sftp_test.go  shell_history_hook.go  ssh.go  ssh_command_exec.go  ssh_output_compress.go  ssh_output_tap.go  (+9 more)
module/kimiapi/: pyproject.toml  requirements.lock.txt
module/kimiapi/app/: bootstrap.py  config.py  main.py
module/kimiapi/app/api/: auth.py  converters.py  errors.py  models.py  routes.py  streaming.py
module/kimiapi/app/core/: __init__.py  auth.py  keys.py  kimi_account_pool.py  kimi_account_store.py  kimi_token_store.py  logs.py  storage.py  token_display.py  token_manager.py
module/kimiapi/app/dashboard/: api_routes.py  view_models.py
module/kimiapi/app/kimi/: __init__.py  chunks.py  (+6 more)
module/kimiapi/data/: .session_secret  api_keys.json  kimi_accounts.json  kimi_client_identity.json  request_logs.sqlite3
module/kimiapi/kimi2api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
module/kimiapi/web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+230 files in other folders)
